--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container">
         <div class="row">
             <div class="four columns">
-                <img src="imag/COYSI.jpg" id="logo">
+                <img src="imag/1.jpg" id="logo">
             </div>
             <div class="two columns u-pull-right">
                 <ul>
                     <li class="submenu">
-                            <img src="imag/COYSI PNG.png" id="img-carrito">
+                            <img src="imag/1.jpg" id="img-carrito">
                             <div id="carrito">
                                     
                                     <table id="lista-carrito" class="u-full-width">
@@ -91,7 +91,7 @@
                     <div class="info-card">
                         <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
                         <p>Juan Pedro</p>
-                        <img src="imag/COYSI PNG.png">
+                        <img src="imag/1.jpg">
                         <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar Al Carrito</a>
                     </div>
@@ -130,7 +130,7 @@
                     <div class="info-card">
                         <h4>Huerto en tu casa</h4>
                         <p>Juan Pedro</p>
-                        <img src="imag/COYSI PNG.png">
+                        <img src="imag/1.jpg">
                         <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="4">Agregar Al Carrito</a>
                     </div>
@@ -180,7 +180,7 @@
                         <div class="info-card">
                             <h4>Estudio Musical en tu casa</h4>
                             <p>Juan Pedro</p>
-                            <img src="imag/COYSI2.jpg">
+                            <img src="imag/1.jpg">
                             <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="8">Agregar Al Carrito</a>
                         </div>
