--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="info-card">
                             <h4>Guitarra para Principiantes</h4>
                             <p>Juan Pedro</p>
-                            <img src="imag/4.jpg">
+                            <img src="imag/jh.jpg">
                             <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="3">Agregar Al Carrito</a>
                         </div>
@@ -154,7 +154,7 @@
                         <div class="info-card">
                             <h4>Diseño Web para Principiantes</h4>
                             <p>Juan Pedro</p>
-                            <img src="imag/4.jpg">
+                            <img src="imag/jh.jpg">
                             <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="6">Agregar Al Carrito</a>
                         </div>
@@ -164,7 +164,7 @@
         <div class="row">
             <div class="four columns">
                 <div class="card">
-                    <img src="imag/4.jpg" class="imagen-curso u-full-width">
+                    <img src="imag/1.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
                         <h4>Comida Mexicana para principiantes</h4>
                         <p>Juan Pedro</p>
@@ -206,7 +206,7 @@
                         <div class="info-card">
                             <h4>Prepara galletas caseras</h4>
                             <p>Juan Pedro</p>
-                            <img src="imag/4.jpg">
+                            <img src="imag/th.jpeg">
                             <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="10">Agregar Al Carrito</a>
                         </div>
@@ -214,11 +214,11 @@
                 </div>
                 <div class="four columns">
                         <div class="card">
-                            <img src="imag/4.jpg" class="imagen-curso u-full-width">
+                            <img src="imag/1.jpg" class="imagen-curso u-full-width">
                             <div class="info-card">
                                 <h4>JavaScript Moderno con ES6</h4>
                                 <p>Juan Pedro</p>
-                                <img src="imag/1.jpg">
+                                <img src="imag/th.jpeg">
                                 <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                                 <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="11">Agregar Al Carrito</a>
                             </div>
